architecture projects updated

--- a/index.html
+++ b/index.html
@@ -94,11 +94,22 @@
       <a href="http://vickywang.design/" class="pointer">VW
       </a>
     </div>
-    <div class="head-right">
-      <a href="/" class="active  head-right-1550"> PROJECT </a>
-      <a href="/architecture" class="inactive head-right-1550"> ARCHITECTURE </a>
-      <a href="/photography" class="inactive  head-right-1550"> PHOTOGRAPHY </a>
-      <a href="#" class="inactive  head-right-1550" id="about"> ABOUT </a>
+    <div class="head-right ">
+      <a href="/" class="active head-right-1550 box">
+        PROJECT
+      </a>
+      <a href="/architecture" class="inactive head-right-1550 box">
+        ARCHITECTURE
+      </a>
+
+      <a href="/photography" class="inactive head-right-1550 box">
+        PHOTOGRAPHY
+      </a>
+
+      <a href="#" class="inactive head-right-1550 box" id="about">
+        ABOUT
+      </a>
+
     </div>
   </div>
   <!--head-->
@@ -113,8 +124,7 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
+
     <div class="body-landing">
       <div class="body-intro">
         <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -174,7 +184,7 @@
 
     </div>
     <!--Project 1-->
-    <br> <br>
+    <br>
 
     <!--Project 2-->
     <div class="body-h">
@@ -192,7 +202,7 @@
       </div>
     </div>
     <!--Project 2-->
-    <br> <br>
+    <br>
 
     <!--Project 3-->
     <div class="body-h">
@@ -224,12 +234,6 @@
     </div>
     <!-- content-->
     <!-- architecture-->
-
-
-
-
-
-
     <div class="carousel">
       <div class="nav nav-left">
         <div class="ion-chevron-left carousel-arrow-icon-left">
@@ -446,22 +450,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- architecture-->
 
     <!-- content-->
@@ -469,16 +457,17 @@
     <div class="content-tl">
       <a href="/photography" class="t-tl"> Photography
       </a>
-      <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
+      <img href="/photography" class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
+
     </div>
+
+
     <!-- content-->
 
     <!-- photography new-->
-
-
     <div class="carousel">
       <div class="nav nav-left">
-        <div class="ion-chevron-left carousel-arrow-icon-left">
+        <div class="ion-chevron-left">
           <img src="./arrow-left.svg" alt="left">
         </div>
       </div>
@@ -489,11 +478,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">Bosque Del Apache National Wildlife Refuge
-
-                </a>
+                <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -512,11 +498,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">Bosque Del Apache National Wildlife Refuge
-
-                </a>
+                <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -535,11 +518,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">Bosque Del Apache National Wildlife Refuge
-
-                </a>
+                <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -559,10 +539,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/Photography" class="t-title">Sacramento National Wildlife Refuge
-                </a>
+                <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -582,10 +560,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/Photography" class="t-title">Sacramento National Wildlife Refuge
-                </a>
+                <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -604,11 +580,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">Sacramento National Wildlife Refuge
-
-                </a>
+                <p class="t-title">Sacramento National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -628,12 +601,9 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">Teton National Park </a>
+                <p class="t-title">Teton National Park </p>
                 <p class="horizontal-line"></p>
-
-                <p class="t-subtitle">September, 2020
-
-                </p>
+                <p class="t-subtitle">September, 2020</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
               </div>
@@ -652,10 +622,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">White Sands National Monument
-                </a>
+                <p class="t-title">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -675,10 +643,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">White Sands National Monument
-                </a>
+                <p class="t-title">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -699,10 +665,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">White Sands National Monument
-                </a>
+                <p class="t-title">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -723,10 +687,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">White Sands National Monument
-                </a>
+                <p class="t-title">White Sands National Monument </p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -747,10 +709,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">White Sands National Monument
-                </a>
+                <p class="t-title">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -770,10 +730,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">White Sands National Monument
-                </a>
+                <p class="t-title">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -793,10 +751,8 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/photography" class="t-title">White Sands National Monument
-                </a>
+                <p class="t-title">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
-
                 <p class="t-subtitle">December, 2019</p>
                 <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
@@ -811,9 +767,29 @@
             </div>
           </div>
         </div>
+        <div class="slide">
+          <div>
+            <div class="body-h">
+              <div class="body-right  body-txt">
+                <p class="t-title">Yellowstone National Park</p>
+                <p class="horizontal-line"></p>
+                <p class="t-subtitle">September, 2020 </p>
+                <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+
+              </div>
+              <div class="vertical-line">
+              </div>
+              <div class="body-left">
+                <a href="/Photography">
+                  <img id="photos" src="./pg_15.jpg" alt="Photography">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="nav nav-right">
-        <div class="ion-chevron-right carousel-arrow-icon-right">
+        <div class="ion-chevron-right">
           <img src="./arrow-right.svg" alt="right">
         </div>
       </div>
@@ -841,7 +817,7 @@
         <div class="body-left t-titlepls">
           EDUCATION </div>
         <div class="body-v">
-          <p class="t-title">University of California, Berkeley
+          <p class="t-title">UC Berkeley
           </p>
           <p class="t-time">August 2015 - May 2019</p>
           <p class="t-subtitle">Master of Architecture</p>
@@ -849,7 +825,7 @@
         </div>
         <br>
         <div class="body-v">
-          <p class="t-title">Beijing University of Technology</p>
+          <p class="t-title">Beijing University of Tech</p>
           <p class="t-time">May 2009 - August 2013 </p>
           <p class="t-subtitle">Bachelor of Art and Design</p>
           <p class="t-subtitle">Landscape Design</p>
