--- a/photography/index.html
+++ b/photography/index.html
@@ -59,8 +59,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-    I enjoy design and code who loves solving challenging problems. 
-    Interested in what you see? Shoot me an email :) " />
+I enjoy design and code who loves solving challenging problems. 
+Interested in what you see? Shoot me an email :) " />
   <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
@@ -77,7 +77,6 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
-
 </head>
 
 <body>
@@ -94,100 +93,399 @@
       <a href="http://vickywang.design/" class="pointer">VW
       </a>
     </div>
-    <div class="head-right">
-      <a href="/" class="inactive  head-right-1550"> PROJECT </a>
-      <a href="/architecture" class="inactive head-right-1550"> ARCHITECTURE </a>
-      <a href="/photography" class="active  head-right-1550"> PHOTOGRAPHY </a>
-      <a href="#" class="inactive  head-right-1550" id="about"> ABOUT </a>
+    <div class="head-right ">
+      <a href="/" class="inactive head-right-1550 box">
+        PROJECT
+      </a>
+      <a href="/architecture" class="inactive head-right-1550 box">
+        ARCHITECTURE
+      </a>
+
+      <a href="/photography" class="active head-right-1550 box">
+        PHOTOGRAPHY
+      </a>
+
+      <a href="/" class="inactive head-right-1550 box">
+        ABOUT
+      </a>
+
     </div>
   </div>
   <!--head-->
   <!--body-->
+  <div class="body-margin">
 
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <div class="body-landing">
-    <div class="body-intro">
-      <div class="t-hello" id="t-hello-1550">HELLO, </div>
-    </div>
-    <div class="body-intro">
-      <div class="body-v">
-        <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="body-landing">
+      <div class="body-intro">
+        <div class="t-hello" id="t-hello-1550">HELLO, </div>
       </div>
-      <p class="divider"></p>
-      <div class="body-v">
-        <span class="t-me" id="t-me-1550">Photography is my favorite hobby.</span>
-        <span class="t-me" id="t-me-1550"> Recording memories of nature forms
-        </span>
+      <div class="body-intro">
+        <div class="body-v">
+          <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
+        </div>
+        <p class="divider"></p>
+        <div class="body-v">
+          <div class="body-intro">
+            <span class="t-me" id="t-me-1550">Photography</span>
+            <span class="divider1"></span>
+            <span class="t-me" id="t-me-1550"> Nature observation </span>
+          </div>
+          <div class="t-me t-me-1" id="t-me-1550">
+            is my favorite hobby. </div>
+        </div>
+      </div>
+      <p class="t-intro">
+        I love to recompose the nature form with a camera. Observing the narrative of nature
+        components with my perspective. </p>
+    </div>
+
+
+
+
+
+
+
+
+    <div class="body-h">
+      <p class="vertical-line ver1"></p>
+    </div>
+
+    <!--Photo 1-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./01.jpg">
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 1-->
+    <br> <br> <br>
+
+    <!--Photo 2-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./02.jpg">
+      </div>
+    </div>
+    <!--Photo 2-->
+    <br> <br> <br>
+
+    <!--Photo 3-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./03.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 3-->
+    <br> <br> <br>
+
+    <!--Photo 4-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./04.jpg">
 
       </div>
     </div>
-    <p class="t-intro">
-      Passionate about translating complex business requirements into compelling user
-      experiences.
-      While my focus is primarily on design, I don't mind occasionally writing code when the
-      need
-      arises.</p>
+    <!--Photo 4-->
+    <br> <br> <br>
+
+    <!--Photo 5-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./05.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 5-->
+    <br> <br> <br>
+
+    <!--Photo 6-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">Sacramento National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./06.jpg">
+
+      </div>
+    </div>
+    <!--Photo 6-->
+    <br> <br> <br>
+
+    <!--Photo 7-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./07.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">Teton National Park </p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">September, 2020</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 7-->
+    <br> <br> <br>
+
+    <!--Photo 8-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">White Sands National Monument</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./08.jpg">
+
+      </div>
+    </div>
+    <!--Photo 8-->
+
+
+
+    <br> <br> <br>
+
+    <!--Photo 9-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./09.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">White Sands National Monument</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 9-->
+    <br> <br> <br>
+
+    <!--Photo 10-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">White Sands National Monument</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./10.jpg">
+
+      </div>
+    </div>
+    <!--Photo 10-->
+    <br> <br> <br>
+
+    <!--Photo 11-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./11.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">White Sands National Monument </p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 11-->
+    <br> <br> <br>
+
+    <!--Photo 12-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">White Sands National Monument</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./12.jpg">
+
+      </div>
+    </div>
+    <!--Photo 12-->
+
+
+
+    <br> <br> <br>
+
+    <!--Photo 13-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./13.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">White Sands National Monument</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 13-->
+    <br> <br> <br>
+
+    <!--Photo 14-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">White Sands National Monument</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./14.jpg">
+
+      </div>
+    </div>
+    <!--Photo 14-->
+
+    <br> <br> <br>
+
+    <!--Photo 15-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./15.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">Yellowstone National Park</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">September, 2020 </p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 15-->
+    <br> <br> <br>
+
+    <!--Photo 16-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">Taos Pueblo Indian Reservation</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./16.jpg">
+
+      </div>
+    </div>
+    <!--Photo 16-->
+
+
+
+
+
+
+
+
+
+
+
   </div>
 
 
 
 
-  
-  <div class="body-h">
-    <div class="body-left body-img p1">
-      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
-        alt="Yellowstone National Park" class="float">
-    </div>
 
-    <div class="body-right body-txt">
-      <p class="t-title">Yellowstone National Park</p>
-      <p class="t-subtitle">September, 2020</p>
-    </div>
+
+
+
+
   </div>
-
-
-
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <!--back to top-->
   <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
@@ -196,6 +494,8 @@
 
   </button>
   <!--back to top-->
+  <br>
+  <br>
 
   <!--footer-->
   <div class="footer">
