--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,84 +1,83 @@
 <html>
 
-  <head>
-    <link rel="stylesheet" href="../main.css">
-    <script type="text/javascript" src="../scripts.js"></script>
-  
-  
-  
-    <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-      rel="stylesheet">
-    <!--font     font-family: 'Titillium Web', sans-serif; -->
-  
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet">
-    <!--font     font-family: 'Roboto', sans-serif; -->
-  
-    <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-    <!--font using hello-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet">
-    <!--font     font-family: 'Catamaran', sans-serif; -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet">
-    <!--font font-family: 'Lato', sans-serif; -->
-  
-    <script type="text/javascript"
-      src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <!--jQuery-->
-    <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!--aos-->
-    <script type="text/javascript"
-      src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-    <!-- gsap -tool-bar-->
-    <script type="text/javascript"
-      src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-    <!-- gsap - tool-bar-->
-  
-    <script type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-    <!-- gsap - ScrollTrigger-->
-    <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-    <!-- gsap - ScrollTrigger-->
-  
-  
-  
-  
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <title>Vicky Wang</title>
-    <meta property="og:site_name" content="VICKY WANG">
-  
-    <meta property="og:url" content="/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="VICKY WANG" />
-    <meta property="og:description" content="Hi! Thanks for stopping by. 
-      I enjoy design and code who loves solving challenging problems. 
-      Interested in what you see? Shoot me an email :) " />
-    <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="750">
-    <meta property="og:image:height" content="750">
-  
-    <meta name="twitter:url" content="//vickywang.design">
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="VICKY WANG" />
-    <meta name="twitter:creator" content="VICKY WANG" />
-    <meta property="twitter:title" content="VICKY WANG">
-    <meta property="twitter:description"
-      content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
-    <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="750">
-    <meta property="og:image:height" content="750">
-  
-  </head>
+<head>
+  <link rel="stylesheet" href="../main.css">
+  <script type="text/javascript" src="../scripts.js"></script>
+
+
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Titillium Web', sans-serif; -->
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Roboto', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+  <!--font using hello-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Catamaran', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--font font-family: 'Lato', sans-serif; -->
+
+  <script type="text/javascript"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
+  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!--aos-->
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <!-- gsap -tool-bar-->
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <!-- gsap - tool-bar-->
+
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
+  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
+
+
+
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Vicky Wang</title>
+  <meta property="og:site_name" content="VICKY WANG">
+
+  <meta property="og:url" content="/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="VICKY WANG" />
+  <meta property="og:description" content="Hi! Thanks for stopping by. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) " />
+  <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
+
+  <meta name="twitter:url" content="//vickywang.design">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="VICKY WANG" />
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <meta property="twitter:title" content="VICKY WANG">
+  <meta property="twitter:description"
+    content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
+  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
+</head>
 
 <body>
   <!--head-->
@@ -94,15 +93,272 @@
       <a href="http://vickywang.design/" class="pointer">VW
       </a>
     </div>
-    <div class="head-right">
-      <a href="/" class="inactive  head-right-1550"> PROJECT </a>
-      <a href="/architecture" class="active head-right-1550"> ARCHITECTURE </a>
-      <a href="/photography" class="inactive  head-right-1550"> PHOTOGRAPHY </a>
-      <a href="#" class="inactive  head-right-1550" id="about"> ABOUT </a>
+    <div class="head-right ">
+      <a href="/" class="inactive head-right-1550 box">
+        PROJECT
+      </a>
+      <a href="/architecture" class="active head-right-1550 box">
+        ARCHITECTURE
+      </a>
+
+      <a href="/photography" class="inactive head-right-1550 box">
+        PHOTOGRAPHY
+      </a>
+
+      <a href="/" class="inactive head-right-1550 box">
+        ABOUT
+      </a>
+
     </div>
   </div>
   <!--head-->
+  <!--body-->
 
+  <div class="body-margin">
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="body-landing">
+      <div class="body-intro">
+        <div class="t-hello" id="t-hello-1550">HELLO, </div>
+      </div>
+      <div class="body-intro">
+        <div class="body-v">
+          <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
+        </div>
+        <p class="divider"></p>
+        <div class="body-v">
+          <div class="t-me t-me-1" id="t-me-1550">
+            Selected academic projects </div>
+          <div class="body-intro">
+
+            <span class="t-me" id="t-me-1550">Architecture</span>
+            <span class="divider1"></span>
+            <span class="t-me" id="t-me-1550"> Design </span>
+          </div>
+
+        </div>
+      </div>
+      <p class="t-intro">
+        Most of the projects are from my three-year Master of Architecture program. Our main focuses
+        were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
+        material, tectonic, social, technological, and environmental determinants of building form.
+        the penultimate studio incorporate integrative thinking that shapes complex architectural
+        design and technical solutions based on design research and studio requirements.</p>
+    </div>
+
+
+
+
+
+
+
+
+    <div class="body-h">
+      <p class="vertical-line ver1"></p>
+    </div>
+
+    <!--architecture 1-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title" href="./recreation_commons">
+          RECREATION COMMONS </a>
+        </p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
+        <p class="t-subtitle">M. Arch, CED, UC Berkeley</p>
+        <p class="t-subtitle">Instructor: Roddy Creedon</p>
+        <p class="t-subtitle">Site: 110 Franklin St. San Francisco, CA, 94102</p>
+        <p class="t-subtitle">Total Floor Area: 22900 s.f. 4 Floors</p>
+
+      </div>
+    </div>
+    <!--architecture 1-->
+    <br> <br> <br>
+
+    <!--architecture 2-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <a class="t-title" href="./narrow_stripes/"> NARROW STRIPES </a>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
+        <p class="t-subtitle">Site: Location: Hyde Park, London </p>
+        <p class="t-subtitle">7500 square metres approx. </p>
+        <p class="t-subtitle">Maximum Built Area: 4000 square metres </p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <a href="./narrow_stripes/"> <img src="./ar_02.jpg"> </a>
+
+      </div>
+    </div>
+    <!--architecture 2-->
+    <br> <br> <br>
+
+    <!--architecture 3-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title" href="./recovery_of_river_edges/"> <img src="./ar_03.jpg"></a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title" href="./recovery_of_river_edges/"> RECOVERY OF RIVER EDGES </a>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">Introduction to Architecture Studio 2, Spring 2016 </p>
+        <p class="t-subtitle">M. Arch, CED, UC Berkeley </p>
+        <p class="t-subtitle">Instructor: Jay Atherton </p>
+        <p class="t-subtitle">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+        </p>
+
+      </div>
+    </div>
+    <!--architecture 3-->
+    <br> <br> <br>
+
+    <!--architecture 4-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <a class="t-title" href="./manifold_ground/">MANIFOLD GROUND </a>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">[IN]ARCH ADV, SUMMERS 2014 </p>
+        <p class="t-subtitle">Summer Program, CED, UC Berkeley </p>
+        <p class="t-subtitle">Instructor: Keith Plymale </p>
+
+        <p class="t-subtitle">Site: 450 Hayes St. San Francisco, CA 94102 </p>
+
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
+
+      </div>
+    </div>
+    <!--architecture 4-->
+    <br> <br> <br>
+
+    <!--architecture 5-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title" href="./the_rotation_of_curves/"> <img src="./ar_05.jpg"></a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title" href="./the_rotation_of_curves/">THE ROTATION OF CURVES </a>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">Introduction to Architecture Studio 1, Fall 2015 </p>
+        <p class="t-subtitle">M. Arch, CED, UC Berkeley </p>
+        <p class="t-subtitle">Instructor: Rudabeh Pakravan </p>
+
+      </div>
+    </div>
+    <!--architecture 5-->
+    <br> <br> <br>
+
+    <!--architecture 6-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">KAPPE HOUSE STUDY </p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+        <p class="t-subtitle">M. Arch, CED, UC Berkeley </p>
+        <p class="t-subtitle">Instructor: Yung Ho Chang </p>
+
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <img src="./ar_06.jpg">
+
+      </div>
+    </div>
+    <!--architecture 6-->
+    <br> <br> <br>
+
+    <!--architecture 7-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title" href="./thesis_studio/"><img src="./ar_07.jpg"></a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title" href="./thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
+        </a>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
+        <p class="t-subtitle">M. Arch, CED, UC Berkeley</p>
+        <p class="t-subtitle">Instructor: Kyle Steinfeld </p>
+
+      </div>
+    </div>
+    <!--architecture 7-->
+    <br> <br> <br>
+
+    <!--architecture 8-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <a class="t-title" href="./LACAMA/">LACMA</a>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
+        <p class="t-subtitle">Instructor: Mark Anderson</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <a class="t-title" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
+
+      </div>
+    </div>
+    <!--architecture 8-->
+
+
+
+    <br> <br> <br>
+
+    <!--architecture 9-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title" href="./other_academic_works/"><img src="./ar_09.jpg"></a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title" href="./other_academic_works/">OTHER ACADEMIC WORKS </a>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">798 Exhibition Gallery 2010 </p>
+        <p class="t-subtitle">The Renovation of a Factory Building 2013 </p>
+        <p class="t-subtitle">Mountain Residential House 2012 </p>
+
+      </div>
+    </div>
+    <!--architecture 9-->
+  </div>
   <!--body-->
 
 
@@ -111,45 +367,6 @@
 
 
   <!--footer-->
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <br>
   <br>
   <br>
