--- a/architecture/index.html
+++ b/architecture/index.html
@@ -175,11 +175,13 @@
           RECREATION COMMONS </a>
         </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
-        <p class="t-subtitle">M. Arch, CED, UC Berkeley</p>
-        <p class="t-subtitle">Instructor: Roddy Creedon</p>
-        <p class="t-subtitle">Site: 110 Franklin St. San Francisco, CA, 94102</p>
-        <p class="t-subtitle">Total Floor Area: 22900 s.f. 4 Floors</p>
+        <p class="t-text">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
+        <p class="t-text">M. Arch, CED, UC Berkeley</p>
+        <p class="t-text">Instructor: Roddy Creedon</p>
+        <p class="t-text">Duration: One Semester</p>
+
+        <p class="t-text">Site: 110 Franklin St. San Francisco, CA, 94102</p>
+        <p class="t-text">Total Floor Area: 22900 s.f. 4 Floors</p>
 
       </div>
     </div>
@@ -192,10 +194,11 @@
       <div class="body-left body-txt">
         <a class="t-title" href="./narrow_stripes/"> NARROW STRIPES </a>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
-        <p class="t-subtitle">Site: Location: Hyde Park, London </p>
-        <p class="t-subtitle">7500 square metres approx. </p>
-        <p class="t-subtitle">Maximum Built Area: 4000 square metres </p>
+        <p class="t-text">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
+        <p class="t-text">Duration: Six Weeks </p>
+        <p class="t-text">Site: Location: Hyde Park, London </p>
+        <p class="t-text">7500 square metres approx. </p>
+        <p class="t-text">Maximum Built Area: 4000 square metres </p>
       </div>
 
       <div class="vertical-line-blank">
@@ -206,6 +209,50 @@
       </div>
     </div>
     <!--architecture 2-->
+    <br> <br> <br>
+    <!--THESIS -->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title" href="./thesis_studio/"><img src="./ar_07.jpg"></a>
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <a class="t-title" href="./thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
+        </a>
+        <p class="horizontal-line"></p>
+        <p class="t-text">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
+        <p class="t-text">M. Arch, CED, UC Berkeley</p>
+        <p class="t-text">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
+        <p class="t-text">Duration: Two Semesters</p>
+
+
+      </div>
+    </div>
+    <!--THESIS -->
+    <br> <br> <br>
+    <!--MANIFOLD GROUND -->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <a class="t-title" href="./manifold_ground/">MANIFOLD GROUND </a>
+        <p class="horizontal-line"></p>
+        <p class="t-text">[IN]ARCH ADV, SUMMERS 2014 </p>
+        <p class="t-text">Summer Program, CED, UC Berkeley </p>
+        <p class="t-text">Instructor: Keith Plymale </p>
+        <p class="t-text">Duration: One Semester</p>
+        <p class="t-text">Site: 450 Hayes St. San Francisco, CA 94102 </p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-img float">
+        <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
+
+      </div>
+    </div>
+    <!--MANIFOLD GROUND -->
     <br> <br> <br>
 
     <!--architecture 3-->
@@ -219,60 +266,63 @@
       <div class="body-right body-txt">
         <a class="t-title" href="./recovery_of_river_edges/"> RECOVERY OF RIVER EDGES </a>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">Introduction to Architecture Studio 2, Spring 2016 </p>
-        <p class="t-subtitle">M. Arch, CED, UC Berkeley </p>
-        <p class="t-subtitle">Instructor: Jay Atherton </p>
-        <p class="t-subtitle">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+        <p class="t-text">Introduction to Architecture Studio 2, Spring 2016 </p>
+        <p class="t-text">M. Arch, CED, UC Berkeley </p>
+        <p class="t-text">Instructor: Jay Atherton </p>
+        <p class="t-text">Duration: One Semester</p>
+        <p class="t-text">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
         </p>
 
       </div>
     </div>
     <!--architecture 3-->
     <br> <br> <br>
-
-    <!--architecture 4-->
+    <!--CURVES-->
     <div class="body-h">
-
       <div class="body-left body-txt">
-        <a class="t-title" href="./manifold_ground/">MANIFOLD GROUND </a>
+        <a class="t-title" href="./the_rotation_of_curves/">THE ROTATION OF CURVES </a>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">[IN]ARCH ADV, SUMMERS 2014 </p>
-        <p class="t-subtitle">Summer Program, CED, UC Berkeley </p>
-        <p class="t-subtitle">Instructor: Keith Plymale </p>
-
-        <p class="t-subtitle">Site: 450 Hayes St. San Francisco, CA 94102 </p>
-
+        <p class="t-text">Introduction to Architecture Studio 1, Fall 2015 </p>
+        <p class="t-text">M. Arch, CED, UC Berkeley </p>
+        <p class="t-text">Instructor: Rudabeh Pakravan </p>
+        <p class="t-text">Duration: One Semester</p>
       </div>
-
       <div class="vertical-line-blank">
       </div>
+
       <div class="body-right body-img float">
-        <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
-
-      </div>
-    </div>
-    <!--architecture 4-->
-    <br> <br> <br>
-
-    <!--architecture 5-->
-    <div class="body-h">
-      <div class="body-left body-img float">
         <a class="t-title" href="./the_rotation_of_curves/"> <img src="./ar_05.jpg"></a>
 
       </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <a class="t-title" href="./the_rotation_of_curves/">THE ROTATION OF CURVES </a>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">Introduction to Architecture Studio 1, Fall 2015 </p>
-        <p class="t-subtitle">M. Arch, CED, UC Berkeley </p>
-        <p class="t-subtitle">Instructor: Rudabeh Pakravan </p>
+    </div>
+    <!--CURVES-->
+    <br> <br> <br>
+    <!--LACMA-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <a class="t-title" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
 
       </div>
+
+      <div class="vertical-line-blank">
+      </div>
+
+      <div class="body-right body-txt">
+        <a class="t-title" href="./LACAMA/">LACMA</a>
+        <p class="horizontal-line"></p>
+        <p class="t-text">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
+        <p class="t-text">Instructor: Mark Anderson</p>
+        <p class="t-text">Duration: One Semester</p>
+
+      </div>
+
+
+
     </div>
-    <!--architecture 5-->
+    <!-- LACMA-->
     <br> <br> <br>
+
+
 
     <!--architecture 6-->
     <div class="body-h">
@@ -280,9 +330,10 @@
       <div class="body-left body-txt">
         <p class="t-title">KAPPE HOUSE STUDY </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-        <p class="t-subtitle">M. Arch, CED, UC Berkeley </p>
-        <p class="t-subtitle">Instructor: Yung Ho Chang </p>
+        <p class="t-text">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+        <p class="t-text">M. Arch, CED, UC Berkeley </p>
+        <p class="t-text">Instructor: Yung Ho Chang </p>
+        <p class="t-text">Duration: One Semester, One Unit</p>
 
       </div>
 
@@ -296,68 +347,13 @@
     <!--architecture 6-->
     <br> <br> <br>
 
-    <!--architecture 7-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a class="t-title" href="./thesis_studio/"><img src="./ar_07.jpg"></a>
-
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <a class="t-title" href="./thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
-        </a>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
-        <p class="t-subtitle">M. Arch, CED, UC Berkeley</p>
-        <p class="t-subtitle">Instructor: Kyle Steinfeld </p>
-
-      </div>
-    </div>
-    <!--architecture 7-->
-    <br> <br> <br>
-
-    <!--architecture 8-->
-    <div class="body-h">
-
-      <div class="body-left body-txt">
-        <a class="t-title" href="./LACAMA/">LACMA</a>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
-        <p class="t-subtitle">Instructor: Mark Anderson</p>
-      </div>
-
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <a class="t-title" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
-
-      </div>
-    </div>
-    <!--architecture 8-->
 
 
 
-    <br> <br> <br>
 
-    <!--architecture 9-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a class="t-title" href="./other_academic_works/"><img src="./ar_09.jpg"></a>
 
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <a class="t-title" href="./other_academic_works/">OTHER ACADEMIC WORKS </a>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">798 Exhibition Gallery 2010 </p>
-        <p class="t-subtitle">The Renovation of a Factory Building 2013 </p>
-        <p class="t-subtitle">Mountain Residential House 2012 </p>
 
-      </div>
-    </div>
-    <!--architecture 9-->
+
   </div>
   <!--body-->
 
