--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -387,12 +387,12 @@
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <!--plans and sections 1-->
+    <!--site-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">FLOOR PLANS </p>
+        <p class="t-title">SITE </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">F3 and F4</p>
+        <p class="t-subtitle">110 Franklin St. San Francisco, CA, 94102</p>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -400,7 +400,7 @@
         <img src="site.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
-    <!--plans and sections 1-->
+    <!--site-->
     <br>
 
 
