--- a/photography/index.html
+++ b/photography/index.html
@@ -466,6 +466,44 @@ Interested in what you see? Shoot me an email :) " />
     <!--Photo 16-->
 
 
+    <br> <br> <br>
+
+    <!--Photo 17-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="./17.jpg">
+
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title">Donner Lake </p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019   </p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+    <!--Photo 17-->
+    <br> <br> <br>
+
+    <!--Photo 18-->
+    <div class="body-h">
+
+      <div class="body-left body-txt">
+        <p class="t-title">Taos Pueblo Indian Reservation</p>
+        <p class="horizontal-line"></p>
+        <p class="t-subtitle">December, 2019</p>
+        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right  float">
+        <img src="./19.jpg" class="body-img-v">
+
+      </div>
+    </div>
+    <!--Photo 18-->
 
 
 
