--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -2,7 +2,52 @@
 
 <head>
   <link rel="stylesheet" href="../../main.css">
+  <script type="text/javascript" src="../../scripts.js"></script>
 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Titillium Web', sans-serif; -->
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Roboto', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+  <!--font using hello-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Catamaran', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--font font-family: 'Lato', sans-serif; -->
+
+  <script type="text/javascript"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
+  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!--aos-->
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <!-- gsap -tool-bar-->
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <!-- gsap - tool-bar-->
+
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
+  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
+
+
+
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Vicky Wang</title>
@@ -14,157 +59,218 @@
   <meta property="og:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
   Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+  <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
 
-  <meta name="twitter:url" content="https://vickywang.design">
+  <meta name="twitter:url" content="//vickywang.design">
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="VICKY WANG" />
   <meta name="twitter:creator" content="VICKY WANG" />
   <meta property="twitter:title" content="VICKY WANG">
-  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :)">
-  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta property="twitter:description"
+    content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
+  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
 </head>
 
+
 <body>
+  <!--head-->
+  <!--progress bar-->
+  <div class="header">
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div>
+  </div>
+  <!--progress bar-->
+  <div class="main-tool-bar">
+    <div class="head-left">
+      <a href="http://vickywang.design/" class="pointer">VW
+      </a>
+    </div>
+    <div class="head-right ">
+      <a href="/" class="inactive head-right-1550 box">
+        PROJECT
+      </a>
+      <a href="/architecture" class="active head-right-1550 box">
+        ARCHITECTURE
+      </a>
 
-  <div class=margin>
+      <a href="/photography" class="inactive head-right-1550 box">
+        PHOTOGRAPHY
+      </a>
 
-    <!--head-->
-    <div class="container_head">
-
-      <div class="container-head" id="topbar">
-
-        <div class="container-head-left">
-          <a href="http://vickywang.design/" class="pointer"> VICKY WANG
-          </a>
-          <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
-          </p>
-        </div>
-        <div class="container-head-right" id="topbar-right">
-          <div> <a href="/" class="inactive"> PROJECT </a>
-          </div>
-          <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
-          </div>
-          <div> <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
-          </div>
-          <div> <a href="/about" class="inactive"> ABOUT </a>
-          </div>
-        </div>
-      </div>
-
+      <a href="/" class="inactive head-right-1550 box">
+        ABOUT
+      </a>
 
     </div>
-    <!--head-->
+  </div>
+  <!--head-->
+  <span id="circle" class="circle"></span>
 
-    <!--body1-->
-    <div class="container_body">
-      <img
-        src="./NS_Render.jpg"
-        alt="DIAGRAM" class="image">
+  <!--body-->
+  <div class="body-margin">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-      <div class="image-text">
-        <div class="text_button">EXERCISE VS. LEISURE</div>
+    <!--diagram 1-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="render.jpg" alt="DIAGRAM" class="image">
+      </div>
+      <div class="vertical-line-blank"></div>
+      <div class="body-right body-txt">
+        <P class="t-title">NARROW STRIPES</P>
+        <p class="horizontal-line"></p>
+        <p class="t-text">Using a series of straps to divide the space that providing an
+          infrastructure space serves the community nearby</p>
+      </div>
+
+    </div>
+    <!--diagram 1-->
+
+
+
+    <!-- content-->
+    <div class="content-tl">
+      <p class="t-tl"> Programs and Diagrams </p>
+      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+    </div>
+    <!-- content-->
+    <br>
+
+    <!--diagram 2-->
+    <div class="body-h">
+      <div class="body-right  body-txt">
+        <p class="t-title">PROGRAMS</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text">Three categories of programs. Social and Leisure, Library, and
+          miscellaneous</p>
+      </div>
+      <div class="body-left body-img float">
+        <img src="diagram.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
+    <!--diagram 2-->
+    <br>
 
-    <!--body1-->
-    
+    <!-- content-->
+    <div class="content-tl">
+      <p class="t-tl"> Renders</p>
+      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+    </div>
+    <!-- content-->
 
-    <!--body2-->
-    <div class="container_body">
-      <img src="./narrow_stripes_render.jpg" alt="render" class="image">
 
-      <div class="image-text">
-        <div class="text_button">TWO VOLUMES</div>
+
+    <!--Section Perspective -->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="render1.jpg" alt="DIAGRAM" class="image">
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <P class="t-title">RENDERS</P>
+        <p class="horizontal-line"></p>
+        <p class="t-text">Multiple views</p>
       </div>
     </div>
-    <!--body2-->
-    <!--body2-->
-    <div class="container_body">
-      <img src="./narrow_stripes_siteplan.jpg" alt="site plan" class="image">
+    <!--Section Perspective -->
+    <!-- content-->
+    <div class="content-tl">
+      <p class="t-tl"> Site and Floor Plan </p>
+      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+    </div>
+    <!-- content-->
 
-      <div class="image-text">
-        <div class="text_button">LIGHT & AIR</div>
+    <!--Plan-->
+    <div class="body-h">
+      <div class="body-right  body-txt">
+        <p class="t-title">SITE PLAN</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text">Relationship between site and the infrastructure building</p>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-left body-img float">
+        <img src="siteplan.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
-    <!--body2-->
- 
+    <!--Plan-->
+    <br>
+    <!--Plan site-->
+    <div class="body-h">
+      <div class="body-left body-img float">
+        <img src="site.jpg" alt="DIAGRAM" class="image">
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="body-right body-txt">
+        <p class="t-title"> SITE</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text">Location: Hyde Park, London</p>
+      </div>
+
+    </div>
+    <!--Plan site-->
+    <br>
+    <br>
+    <br>
 
 
-<!--body2-->
-<div class="container_body">
-  <img src="./narrow_stripes_diagram.jpg" alt="DIAGRAM" class="image">
 
-  <div class="image-text">
-    <div class="text_button">PRIVATE VS. PUBLIC</div>
+
+  </div>
+</body>
+
+
+
+
+
+<!--body-->
+
+
+<!--back to top-->
+<button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+  <img id="bottom-arrow" class="ArrowHover" src="../../arrow-top.svg" alt="back to top">
+
+  <div id="btnFont">TOP</div>
+
+</button>
+<!--back to top-->
+
+<!--footer-->
+<div class="footer">
+  <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
+  </p>
+  <div class="footer-right">
+    <a href="mailto:vickyw.design@gmail.com">
+      <img class="footer-logo" src="../../mail.svg" alt="email">
+    </a>
+
+    <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b/">
+      <img class="footer-logo" src="../../in.svg" alt="linkedin">
+    </a>
+
+    <a href="https://github.com/vicky-wyq">
+      <img class="footer-logo" src="../../git.svg" alt="github">
+    </a>
+
+    <a href="https://www.instagram.com/vw_yiqi/">
+      <img class="footer-logo" src="../../ins.svg" alt="medium">
+    </a>
   </div>
 </div>
-<!--body2-->
-
-
-
-    <!--body-->
-    <div class="container_body">
-      <img
-        src="./narrow_stripes_site.jpg"
-        alt="SITE" class="image">
-
-      <div class="image-text">
-        <div class="text_button">SITE</div>
-      </div>
-    </div>
-
-
-    <!--body-->
-
-    <!--footer-->
-    <div class="container_footer">
-
-      <div id="infor">
-        <div>
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-          </a>
-
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-              alt="linkedin">
-          </a>
-        </div>
-
-        <div>
-          <a href="https://github.com/vicky-wyq">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg"
-              alt="github">
-          </a>
-        </div>
-
-        <div>
-          <a href="https://medium.com/@vickywang.design">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg"
-              alt="medium">
-          </a>
-        </div>
-      </div>
-
-      <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
-      </p>
-
-    </div>
-</body>
+<!--footer-->
+</div>
 
 </html>
